--- a/index.html
+++ b/index.html
@@ -25,12 +25,28 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
       rel="stylesheet"
     />
-<link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <script src="https://kit.fontawesome.com/kitcode.js" crossorigin="anonymous"> </script>
-    <script src="https://kit.fontawesome.com/61ebb60581.js" crossorigin="anonymous"> </script>
+    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="index.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+    <script
+      src="https://kit.fontawesome.com/kitcode.js"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/61ebb60581.js"
+      crossorigin="anonymous"
+    ></script>
     <title>MyHealthTrail</title>
   </head>
   <body>
@@ -75,170 +91,221 @@
         </div>
       </div>
     </nav>
-<div class="row hero d-sm">
+    <div class="row hero d-sm">
       <div class="col-sm-6">
-        
-      <h2>👋 Welcome to MyHealthTrail</h2>
-      <div id=slideset1>
-        <div>
-        <h1 class="animate-pop-in">Online Health Consultation for expectant and postpartum moms. <br />
-         Book appointments, chat, and share your test results </h1>
+        <h2>👋 Welcome to MyHealthTrail</h2>
+        <div id="slideset1">
+          <div>
+            <h1 class="animate-pop-in">
+              Online Health Consultation for expectant and postpartum moms.
+              <br />
+              Book appointments, chat, and share your test results
+            </h1>
+          </div>
+          <div>
+            <h1>
+              Thousands of doctors, dietitians/nutritionists are a click away.
+              Health checks and consultations anytime anywhere 24/7. Antenatal
+              care right from the comfort of your home
+            </h1>
+          </div>
+        </div>
+        <a href="/contact.html" title="contact" class="btn btn-branding mt-2"
+          >Book an appointment</a
+        >
       </div>
-      <div>
-  <h1>Thousands of doctors, dietitians/nutritionists are a click away.
-      Health checks and consultations anytime anywhere 24/7. 
-      Antenatal care right from the comfort of your home</h1>
-      </div>
-      </div>
-<a href="/contact.html" title="contact" class="btn btn-branding mt-2">Book an appointment</a>
     </div>
-      </div>
 
-      <div class="main-container">
-        <div class="container text-center">
-  
-          <h1 style="color: red;">How it works</h1>
-  
-          <div class="row">
-            <div class="col-sm-3">
-              <div class="card">
-                <i class="material-icons md-48">smartphone</i>
-                <div class="container">
-                  <h6>Sign up or sign in</h6> 
-                  <p>Sign up or sign in to our site with your phone, tablet, or laptop</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-3">
-              <div class="card">
-                <i class="material-icons md-48">folder</i>
-                <div class="container">
-                  <h6>Check through our directory of local and International doctors and Dietitians/Nutritionists</h6> 
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-3">
-              <div class="card">
-                <i class="material-icons md-48">person</i>
-                <div class="container">
-                  <h6>Pick the consultant you want and schedule your consultation time</h6> 
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-3">
-              <div class="card">
-                <i class="material-icons md-48">phone</i>
-                <div class="container">
-                  <h6>Join the consultation room via the agreed channel; audio, video, or chat</h6> 
-                </div>
+    <div class="main-container">
+      <div class="container text-center">
+        <h1 style="color: red">How it works</h1>
+
+        <div class="row">
+          <div class="col-sm-3">
+            <div class="card">
+              <i class="material-icons md-48">smartphone</i>
+              <div class="container">
+                <h6>Sign up or sign in</h6>
+                <p>
+                  Sign up or sign in to our site with your phone, tablet, or
+                  laptop
+                </p>
               </div>
             </div>
           </div>
-          <h3 style="padding: 20px;">For consultants;</h3>
-          <div class="row">
-            <div class="col-sm-3">
-              <div class="card">
-                <i class="material-icons md-48">smartphone</i>
-                <div class="container">
-                  <h6>Sign up, set up your profile, consultation time & fee</h6> 
-                </div>
+          <div class="col-sm-3">
+            <div class="card">
+              <i class="material-icons md-48">folder</i>
+              <div class="container">
+                <h6>
+                  Check through our directory of local and International doctors
+                  and Dietitians/Nutritionists
+                </h6>
               </div>
             </div>
-            <div class="col-sm-3">
-              <div class="card">
-                <i class="material-icons md-48">folder</i>
-                <div class="container">
-                  <h6>Access and assess your patients' medical history</h6> 
-                </div>
+          </div>
+          <div class="col-sm-3">
+            <div class="card">
+              <i class="material-icons md-48">person</i>
+              <div class="container">
+                <h6>
+                  Pick the consultant you want and schedule your consultation
+                  time
+                </h6>
               </div>
             </div>
-            <div class="col-sm-3">
-              <div class="card">
-                <i class="material-icons md-48">phone</i>
-                <div class="container">
-                  <h6>Choose your preferred consultation channel: Audio, video, and/or chats</h6> 
-                </div>
+          </div>
+          <div class="col-sm-3">
+            <div class="card">
+              <i class="material-icons md-48">phone</i>
+              <div class="container">
+                <h6>
+                  Join the consultation room via the agreed channel; audio,
+                  video, or chat
+                </h6>
               </div>
             </div>
-            <div class="col-sm-3">
-              <div class="card">
-                <i class="material-icons md-48">medication</i>
-                <div class="container">
-                  <h6>Diagnose health conditions, prescribe medication or diet, and recommended diagnostic tests when needed</h6> 
-                </div>
+          </div>
+        </div>
+        <h3 style="padding: 20px">For consultants;</h3>
+        <div class="row">
+          <div class="col-sm-3">
+            <div class="card">
+              <i class="material-icons md-48">smartphone</i>
+              <div class="container">
+                <h6>Sign up, set up your profile, consultation time & fee</h6>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-3">
+            <div class="card">
+              <i class="material-icons md-48">folder</i>
+              <div class="container">
+                <h6>Access and assess your patients' medical history</h6>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-3">
+            <div class="card">
+              <i class="material-icons md-48">phone</i>
+              <div class="container">
+                <h6>
+                  Choose your preferred consultation channel: Audio, video,
+                  and/or chats
+                </h6>
+              </div>
+            </div>
+          </div>
+          <div class="col-sm-3">
+            <div class="card">
+              <i class="material-icons md-48">medication</i>
+              <div class="container">
+                <h6>
+                  Diagnose health conditions, prescribe medication or diet, and
+                  recommended diagnostic tests when needed
+                </h6>
               </div>
             </div>
           </div>
         </div>
       </div>
+    </div>
 
     <!-- TESTIMONIALS -->
-    <section id="testimonials">
-      <div class="testimonials_div">
-        <p>Our Testimonials</p>
-        <h2>What Our Valuable Clients Say</h2>
-        <img class="quote_img" src="img/quote (1).png" alt="" />
-      </div>
-
-      <div class="clients_div row">
-        <div class="col-lg-4">
-          <div class="individual_client">
+    <div class="for_carousel testimonials_div">
+      <p>Our Testimonials</p>
+      <h2>What Our Valuable Clients Say</h2>
+      <img class="quote_img" src="img/quote (1).png" alt="" />
+    </div>
+    <section id="testimonials_carousel">
+      <div
+        id="testimonial-carousel"
+        class="carousel slide"
+        data-bs-ride="false"
+      >
+        <div class="carousel_in carousel-inner">
+          <div class="carousel_text carousel-item active">
             <i class="fa-solid fa-quote-left"></i>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit,
-              obcaecati officiis. Dolorem, dolor tenetur ab rem numquam quas
-              nostrum, quia delectus facere ad sunt, doloribus voluptas
-              veritatis reprehenderit esse quaerat!
+            <p class="testimonial-text">
+              When I first found out I was pregnant, of course I felt excited
+              but also pretty nervous! MyHealthTrail was an informative and
+              interesting site where I could learn more about what my body was
+              going through, what was normal, healthy habits, etc.
             </p>
-            <div class="client_info">
-              <div class="woman_img"></div>
-              <p>
-                <strong>Sally Shaaba</strong> <br />
-                NewYork, USA.
-              </p>
-            </div>
+            <img
+              class="testimonial-img"
+              src="img/woman (2).png"
+              alt="lady-profile"
+            />
+            <p>
+              <strong>Grace Aguta</strong> <br />
+              Nairobi, Kenya.
+            </p>
+          </div>
+          <div class="carousel_text carousel-item">
+            <i class="fa-solid fa-quote-left"></i>
+            <p class="testimonial-text">
+              It was a wonderful experience on this site. Very understandable,
+              easily accessible, and knowledge platform. One of the consultants,
+              explained everything that was confusing to me via the site. So
+              that I felt more confident and did not worry about my condition.
+            </p>
+            <img
+              class="testimonial-img"
+              src="img/woman (2).png"
+              alt="lady-profile"
+            />
+            <p>
+              <strong>Sally John</strong> <br />
+              Lagos, Nigeria.
+            </p>
+          </div>
+          <div class="carousel_text carousel-item">
+            <i class="fa-solid fa-quote-left"></i>
+            <p class="testimonial-text">
+              I was able to chat with one of the consultants regarding my
+              problem last week and it was great how he put my mind at ease and
+              explained everything carefully with a lot of detail, that I never
+              got from any other doctor. I was really grateful for his care.
+            </p>
+            <img
+              class="testimonial-img"
+              src="img/woman (2).png"
+              alt="lady-profile"
+            />
+            <p>
+              <strong>Nadia Enam</strong> <br />
+              Accra, Ghana.
+            </p>
           </div>
         </div>
-
-        <div class="col-lg-4">
-          <div class="individual_client">
-            <i class="fa-solid fa-quote-left"></i>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit,
-              obcaecati officiis. Dolorem, dolor tenetur ab rem numquam quas
-              nostrum, quia delectus facere ad sunt, doloribus voluptas
-              veritatis reprehenderit esse quaerat!
-            </p>
-            <div class="client_info">
-              <div class="woman_img"></div>
-              <p>
-                <strong>Sally Shaaba</strong> <br />
-                NewYork, USA.
-              </p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-lg-4">
-          <div class="individual_client">
-            <i class="fa-solid fa-quote-left"></i>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit,
-              obcaecati officiis. Dolorem, dolor tenetur ab rem numquam quas
-              nostrum, quia delectus facere ad sunt, doloribus voluptas
-              veritatis reprehenderit esse quaerat!
-            </p>
-            <div class="client_info">
-              <div class="woman_img"></div>
-              <p>
-                <strong>Sally Shaaba</strong> <br />
-                NewYork, USA.
-              </p>
-            </div>
-          </div>
-        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#testimonial-carousel"
+          data-bs-slide="prev"
+        >
+          <span
+            class="carousel_btn carousel-control-prev-icon"
+            aria-hidden="true"
+          ></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#testimonial-carousel"
+          data-bs-slide="next"
+        >
+          <span
+            class="carousel_btn carousel-control-next-icon"
+            aria-hidden="true"
+          ></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
     </section>
+
     <footer>
       <div class="container">
         <div class="row">
